--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "php": ">=5.6.4",
         "dingo/api": "1.0.x@dev",
         "someline/starter-framework": "1.3.*",
-        "rap2hpoutre/laravel-log-viewer": "^0.7.0"
+        "rap2hpoutre/laravel-log-viewer": "^0.7.0",
+        "ignited/laravel-omnipay": "2.*",
+        "lokielse/omnipay-alipay": "dev-master",
+        "lokielse/omnipay-wechatpay": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
