--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "rap2hpoutre/laravel-log-viewer": "^0.7.0",
         "ignited/laravel-omnipay": "2.*",
         "lokielse/omnipay-alipay": "dev-master",
-        "lokielse/omnipay-wechatpay": "dev-master"
+        "lokielse/omnipay-wechatpay": "dev-master",
+        "toplan/laravel-sms": "2.5.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -22,13 +23,15 @@
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database",
+            "hub"
         ],
         "files": [
             "app/Helpers/Helpers.php"
         ],
         "psr-4": {
-            "Someline\\": "app/"
+            "Someline\\": "app/",
+            "\\": "extender/"
         }
     },
     "autoload-dev": {
