--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "ignited/laravel-omnipay": "2.*",
         "lokielse/omnipay-alipay": "dev-master",
         "lokielse/omnipay-wechatpay": "dev-master",
-        "toplan/laravel-sms": "2.5.*"
+        "toplan/laravel-sms": "2.5.*",
+        "frozennode/administrator": " 5.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
