--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "lokielse/omnipay-alipay": "dev-master",
         "lokielse/omnipay-wechatpay": "dev-master",
         "toplan/laravel-sms": "2.5.*",
-        "frozennode/administrator": " 5.*"
+        "frozennode/administrator": " 5.*",
+        "vinkla/hashids": "^2.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
