--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "toplan/laravel-sms": "2.5.*",
         "frozennode/administrator": " 5.*",
         "vinkla/hashids": "^2.4",
-        "zgldh/qiniu-laravel-storage": "^0.6.0"
+        "zgldh/qiniu-laravel-storage": "^0.6.0",
+        "klaravel/ntrust": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
