--- a/package.json
+++ b/package.json
@@ -6,18 +6,27 @@
     "dev": "gulp watch",
     "theme": "gulp --gulpfile gulpfile_theme.js"
   },
+
   "devDependencies": {
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "css-loader": "^0.25.0",
+    "style-loader": "^0.13.1",
     "autosize": "^3.0.15",
     "bootstrap-sass": "^3.3.7",
     "gulp": "^3.9.1",
     "jquery": "^3.1.0",
     "laravel-elixir": "^6.0.0-9",
-    "laravel-elixir-vue": "^0.1.4",
-    "laravel-elixir-webpack-official": "^1.0.2",
+    "laravel-elixir-vue-2": "^0.2.0",
+    "laravel-elixir-webpack-official": "^1.0.8",
     "lodash": "^4.14.0",
     "moment": "^2.13.0",
-    "vue": "^1.0.26",
-    "vue-i18n": "^4.1.0",
-    "vue-resource": "^0.9.3"
+    "vue": "^2.0.1",
+    "vue-loader": "^9.5.1",
+    "vue-resource": "^1.0.3",
+    "vue-i18n": "4.7.2"
+  },
+  "dependencies": {
+    "element-ui": "^1.0.0-rc.4"
   }
 }
