--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "toplan/laravel-sms": "2.5.*",
         "vinkla/hashids": "^2.4",
         "zgldh/qiniu-laravel-storage": "^0.6.0",
-        "klaravel/ntrust": "^1.1"
+        "geniusts/roles": "^3.0.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
